# bursa-bilisim-search-crawler

./: books.csv  crawler.ipynb  pyproject.toml  urls.csv
